Added 'Delete' action on project explorer context menu
- Displays confirm dialog before deletion
- Closes documents opened in editor tabs if there are to be deleted
- For projects : remove project from workspace once deleted
- Fixed some bugs with workspace folder deletion (recursive delete) and
task manager not calling failure listener
- Updated documentation

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -39,6 +39,10 @@ dialog.confirm.close_project.unsaved.title = Unsaved files
 dialog.error.default.title = Error
 dialog.confirm.close_editor.unsaved.text = The file is not saved.\nChanges will be lost.\nDo you want to continue ?
 dialog.confirm.close_editor.unsaved.title = Unsaved files
+dialog.confirm.delete_artifact.title = Delete
+dialog.confirm.delete_file.message = The file %s is going to be deleted.\nDo you want to continue ?
+dialog.confirm.delete_project.message = The project %s and all its content is going to be deleted.\nDo you want to continue ?
+dialog.confirm.delete_folder.message = The folder %s and all its content is going to be deleted.\nDo you want to continue ?
 
 # Main controller
 main.menu.file = File
@@ -65,6 +69,7 @@ project_navigator.root.title = PROJECTS
 project_navigator.project.menu.close = Close
 project_navigator.folder.menu.new_file = New File
 project_navigator.folder.menu.new_folder = New Folder
+project_navigator.artifact.menu.delete = Delete
 
 # Project wizard controller
 project_wizard.browse.title = Select a location
@@ -74,6 +79,7 @@ task.saving_file = Saving File %s
 task.closing_project = Closing Project %s
 task.creating_file = Creating File %s
 task.creating_folder = Creating Folder %s
+task.deleting_artifact = Deleting %s
 
 # Builtin plugin
 builtin.plugin.preview.html.title = HTML Preview
