Added 'select all' command

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -56,6 +56,7 @@ main.menu.preview = Preview
 main.menu.edit = Edit
 main.menu.edit.undo = Undo
 main.menu.edit.redo = Redo
+main.menu.edit.select_all = Select All
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
 main.open_project.title = Open a Project folder
