Added clipboard control commands
- Cut
- Copy
- Paste

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -57,6 +57,9 @@ main.menu.edit = Edit
 main.menu.edit.undo = Undo
 main.menu.edit.redo = Redo
 main.menu.edit.select_all = Select All
+main.menu.edit.cut = Cut
+main.menu.edit.copy = Copy
+main.menu.edit.paste = Paste
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
 main.open_project.title = Open a Project folder
