--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <slf4j.version>1.6.1</slf4j.version>
         <versionCode>1</versionCode>
         <versionName>0.1</versionName>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
    
     <packaging>jar</packaging>
@@ -94,8 +95,22 @@
                     </execution>
                 </executions>
             </plugin>
-            
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
