Added picker dialog
- Picker dialog
- When several preview are available for one file : displays a picker

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -68,6 +68,8 @@ main.new_file.title = New File
 main.new_file.file_name = File name
 main.new_folder.title = New Folder
 main.new_folder.folder_name = Folder name
+main.preview_picker.title = Choose a preview
+main.preview_picker.text = Several preview are available for this kind of file.\nPlease select one.
 
 # Project navigator
 project_navigator.root.title = PROJECTS
