Prevent Remote HTML Preview from launching twice
- Added info dialog
- Display info dialog when trying to start a new remote HTML preview

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -37,6 +37,7 @@ dialog.confirm.close_app.unsaved.title = Unsaved files
 dialog.confirm.close_project.unsaved.text = The project contains unsaved files.\nAll changes will be lost.\nDo you want to continue ?
 dialog.confirm.close_project.unsaved.title = Unsaved files
 dialog.error.default.title = Error
+dialog.info.default.title = Information
 dialog.confirm.close_editor.unsaved.text = The file is not saved.\nChanges will be lost.\nDo you want to continue ?
 dialog.confirm.close_editor.unsaved.title = Unsaved files
 dialog.confirm.delete_artifact.title = Delete
@@ -90,3 +91,5 @@ task.deleting_artifact = Deleting %s
 
 # Builtin plugin
 builtin.plugin.preview.html.title = HTML Preview
+builtin.plugin.preview.remote_html.title = Remote HTML Preview
+builtin.plugin.preview.remote_html.already_running.text = Remote HTML Preview is already running.
