--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -93,3 +93,4 @@ task.deleting_artifact = Deleting %s
 builtin.plugin.preview.html.title = HTML Preview
 builtin.plugin.preview.remote_html.title = Remote HTML Preview
 builtin.plugin.preview.remote_html.already_running.text = Remote HTML Preview is already running.
+builtin.plugin.preview.remote_html.instructions.text = Open the following link with a HTML5 compliant browser to start remote preview:
