Added connection table on Remote HTML Preview
- Connection table layout
- Rendering time is now computed and displayed

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -94,3 +94,8 @@ builtin.plugin.preview.html.title = HTML Preview
 builtin.plugin.preview.remote_html.title = Remote HTML Preview
 builtin.plugin.preview.remote_html.already_running.text = Remote HTML Preview is already running.
 builtin.plugin.preview.remote_html.instructions.text = Open the following link with a HTML5 compliant browser to start remote preview:
+builtin.plugin.preview.remote_html.active_connections = Active connections
+builtin.plugin.preview.remote_html.remote_address = Address
+builtin.plugin.preview.remote_html.user_agent = User Agent
+builtin.plugin.preview.remote_html.rendering_time = Rendering time (ms)
+builtin.plugin.preview.remote_html.no_connection = No connection
