Finished HTML5 project wizard
- Finished wizard window with field validation + i18n
- Updated project generator script

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -25,6 +25,7 @@ cancel = Cancel
 yes = Yes
 no = No
 close = Close
+browse = Browse...
 
 # Validators
 validator.not.blank = Cannot be blank
@@ -81,6 +82,8 @@ project_navigator.artifact.menu.delete = Delete
 
 # Project wizard controller
 project_wizard.browse.title = Select a location
+project_wizard.name = Name
+project_wizard.location = Location
 
 # Task names
 task.saving_file = Saving File %s
