--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -73,6 +73,9 @@ main.new_folder.folder_name = Folder name
 main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several preview are available for this kind of file.\nPlease select one.
 
+# Welcome controller
+welcome.title = Welcome !
+
 # Project navigator
 project_navigator.root.title = PROJECTS
 project_navigator.project.menu.close = Close
