Added ping request feature on Remote HTML Preview
- Added ping request on connected browser rows double click
- Added name to basic project generation task

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -94,6 +94,7 @@ task.closing_project = Closing Project %s
 task.creating_file = Creating File %s
 task.creating_folder = Creating Folder %s
 task.deleting_artifact = Deleting %s
+task.generating_project = Generating project %s
 
 # Builtin plugin
 builtin.plugin.preview.html.title = HTML Preview
