--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -106,3 +106,4 @@ builtin.plugin.preview.remote_html.remote_address = Address
 builtin.plugin.preview.remote_html.user_agent = User Agent
 builtin.plugin.preview.remote_html.rendering_time = Rendering time (ms)
 builtin.plugin.preview.remote_html.no_connection = No connection
+builtin.plugin.preview.remote_html.track_active_file = Track active file
