--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -98,6 +98,8 @@ task.generating_project = Generating project %s
 
 # Builtin plugin
 builtin.plugin.preview.html.title = HTML Preview
+builtin.plugin.preview.html.orientation = Orientation
+builtin.plugin.preview.html.track_active_file = Track
 builtin.plugin.preview.remote_html.title = Remote HTML Preview
 builtin.plugin.preview.remote_html.already_running.text = Remote HTML Preview is already running.
 builtin.plugin.preview.remote_html.instructions.text = Open the following link with a HTML5 compliant browser to start remote preview:
@@ -106,4 +108,4 @@ builtin.plugin.preview.remote_html.remote_address = Address
 builtin.plugin.preview.remote_html.user_agent = User Agent
 builtin.plugin.preview.remote_html.rendering_time = Rendering time (ms)
 builtin.plugin.preview.remote_html.no_connection = No connection
-builtin.plugin.preview.remote_html.track_active_file = Track active file
+builtin.plugin.preview.remote_html.track_active_file = Track
