Added 'reset' button on HTML Preview
- Added button on bottom bar
- Done some refactoring as well

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -100,6 +100,7 @@ task.generating_project = Generating project %s
 builtin.plugin.preview.html.title = HTML Preview
 builtin.plugin.preview.html.orientation = Orientation
 builtin.plugin.preview.html.track_active_file = Track
+builtin.plugin.preview.html.reset = Reset
 builtin.plugin.preview.remote_html.title = Remote HTML Preview
 builtin.plugin.preview.remote_html.already_running.text = Remote HTML Preview is already running.
 builtin.plugin.preview.remote_html.instructions.text = Open the following link with a HTML5 compliant browser to start remote preview:
