--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -54,6 +54,7 @@ main.menu.file.new_folder = New Folder
 main.menu.file.open_project = Open Project
 main.menu.file.close_project = Close Project
 main.menu.file.save = Save
+main.menu.file.quit = Quit
 main.menu.preview = Preview
 main.menu.edit = Edit
 main.menu.edit.undo = Undo
@@ -71,7 +72,7 @@ main.new_file.file_name = File name
 main.new_folder.title = New Folder
 main.new_folder.folder_name = Folder name
 main.preview_picker.title = Choose a preview
-main.preview_picker.text = Several preview are available for this kind of file.\nPlease select one.
+main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
 
 # Welcome controller
 welcome.title = Welcome !
