Memory leaks fixing

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -45,6 +45,8 @@ dialog.confirm.delete_artifact.title = Delete
 dialog.confirm.delete_file.message = The file %s is going to be deleted.\nDo you want to continue ?
 dialog.confirm.delete_project.message = The project %s and all its content is going to be deleted.\nDo you want to continue ?
 dialog.confirm.delete_folder.message = The folder %s and all its content is going to be deleted.\nDo you want to continue ?
+dialog.find_replace.find = Find
+dialog.find_replace.replace_all = Replace all
 
 # Main controller
 main.menu.file = File
@@ -63,6 +65,7 @@ main.menu.edit.cut = Cut
 main.menu.edit.copy = Copy
 main.menu.edit.paste = Paste
 main.menu.edit.select_all = Select All
+main.menu.edit.find_replace = Find/Replace...
 main.menu.edit.content_assist = Content Assist...
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
