Find / Replace feature
- Refactored find / replace
- Disabled MainController shortcuts when stage is not focused

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -26,6 +26,7 @@ yes = Yes
 no = No
 close = Close
 browse = Browse...
+stop = Stop
 
 # Validators
 validator.not.blank = Cannot be blank
@@ -65,7 +66,12 @@ main.menu.edit.cut = Cut
 main.menu.edit.copy = Copy
 main.menu.edit.paste = Paste
 main.menu.edit.select_all = Select All
-main.menu.edit.find_replace = Find/Replace...
+main.menu.edit.find = Find
+main.menu.edit.find.find = Find...
+main.menu.edit.find.find_next = Find Next
+main.menu.edit.find.find_previous = Find Previous
+main.menu.edit.find.replace = Replace...
+main.menu.edit.find.replace_all = Replace All
 main.menu.edit.content_assist = Content Assist...
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
@@ -76,6 +82,13 @@ main.new_folder.title = New Folder
 main.new_folder.folder_name = Folder name
 main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
+
+# Editor contollers
+editor.search.prompt = Search:
+editor.search.tip = (Use /re/ syntax for regexp search)
+editor.replace.prompt = Replace:
+editor.replace.tip = (Use /re/ syntax for regexp search)
+editor.replace.with_prompt = With:
 
 # Welcome controller
 welcome.title = Welcome !
