--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,5 @@
 application.name = Shift
 application.version.code = ${versionCode}
 application.version.name = ${versionName}
-application.build.number = ${maven.build.timestamp}
+application.build.number = ${timestamp}
 
