--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -27,6 +27,7 @@ no = No
 close = Close
 browse = Browse...
 stop = Stop
+start = Start
 
 # Validators
 validator.not.blank = Cannot be blank
@@ -92,6 +93,7 @@ editor.replace.with_prompt = With:
 
 # Welcome controller
 welcome.title = Welcome !
+welcome.info = Version: %s (%s)
 
 # Project navigator
 project_navigator.root.title = PROJECTS
