'Rename' on all project navigator items
- Added rename dialog
- Plugged new item to project navigator context menu

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -83,6 +83,7 @@ main.new_folder.title = New Folder
 main.new_folder.folder_name = Folder name
 main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
+main.rename.title = Rename
 
 # Editor contollers
 editor.search.prompt = Search:
@@ -101,6 +102,8 @@ project_navigator.project.menu.close = Close
 project_navigator.folder.menu.new_file = New File
 project_navigator.folder.menu.new_folder = New Folder
 project_navigator.artifact.menu.delete = Delete
+project_navigator.artifact.menu.rename = Rename
+project_navigator.artifact.menu.new_name = New name
 
 # Project wizard controller
 project_wizard.browse.title = Select a location
@@ -114,6 +117,7 @@ task.creating_file = Creating File %s
 task.creating_folder = Creating Folder %s
 task.deleting_artifact = Deleting %s
 task.generating_project = Generating project %s
+task.renaming_artifact = Renaming %s
 
 # Builtin plugin
 builtin.plugin.preview.html.title = HTML Preview
