Added help messages
- Help message when editors pane is empty
- Help message when project navigator is empty

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -85,6 +85,9 @@ main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
 main.rename.title = Rename
 
+# Editors pane
+editors_pane.welcome.message = This is the editors pane. Double click a file in the project navigator to edit it.
+
 # Editor contollers
 editor.search.prompt = Search:
 editor.search.tip = (Use /re/ syntax for regexp search)
@@ -98,6 +101,7 @@ welcome.info = Version: %s (%s)
 
 # Project navigator
 project_navigator.root.title = PROJECTS
+project_navigator.welcome.message = This is the project navigator. You can add projects here by using the File menu.
 project_navigator.project.menu.close = Close
 project_navigator.folder.menu.new_file = New File
 project_navigator.folder.menu.new_folder = New Folder
