Added Initializr Project Wizard
- Added new methods in FileUtils
- Added importProjectFromDirectory to workspace (import an existing dir
to workspace as ne project)
- Upgraded BuiltinPlugin.groovy script
- Created new controller and vxml InitializrProjectWizardController

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -137,3 +137,4 @@ builtin.plugin.preview.remote_html.user_agent = User Agent
 builtin.plugin.preview.remote_html.rendering_time = Rendering time (ms)
 builtin.plugin.preview.remote_html.no_connection = No connection
 builtin.plugin.preview.remote_html.track_active_file = Track
+builtin.plugin.project_wizard.initializr.flavor = Flavor
