--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,13 @@
             <version>3.1</version>
         </dependency>
         
+        <!-- Ant unzipper -->
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-compress</artifactId>
+            <version>1.3</version>
+        </dependency>
+        
         <!-- Jackson -->
         
         <dependency>
