--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -76,6 +76,8 @@ main.menu.edit.find.replace_all = Replace All
 main.menu.edit.content_assist = Content Assist...
 main.menu.window = Window
 main.menu.window.new_preview = New Preview
+main.menu.help = Help
+main.menu.help.about = About
 main.open_project.title = Open a Project folder
 main.new_file.title = New File
 main.new_file.file_name = File name
@@ -84,6 +86,7 @@ main.new_folder.folder_name = Folder name
 main.preview_picker.title = Choose a preview
 main.preview_picker.text = Several previews are available for this kind of file.\nPlease select one.
 main.rename.title = Rename
+main.about.title = About
 
 # Editors pane
 editors_pane.welcome.message = This is the editors pane. Double click a file in the project navigator to edit it.
