--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -141,3 +141,4 @@ builtin.plugin.preview.remote_html.rendering_time = Rendering time (ms)
 builtin.plugin.preview.remote_html.no_connection = No connection
 builtin.plugin.preview.remote_html.track_active_file = Track
 builtin.plugin.project_wizard.initializr.flavor = Flavor
+builtin.plugin.project_wizard.initializr.connection_warning = An Internet connection is required
