--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <slf4j.version>1.6.1</slf4j.version>
-        <versionCode>1</versionCode>
+        <versionCode>2</versionCode>
         <versionName>${project.version}</versionName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -18,11 +18,11 @@
     </properties>
    
     <packaging>jar</packaging>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.1.1-SNAPSHOT</version>
     
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Gilles Grousset</name>
+        <name>Backelite</name>
     </organization>
     <inceptionYear>2013</inceptionYear>
     
@@ -62,7 +62,7 @@
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>2.0-SNAPSHOT</version>
+                <version>2.0</version>
                 <configuration>
                     <mainClass>com.backelite.shift.MainApp</mainClass>
                     <allPermissions>true</allPermissions>
