--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
    
     <packaging>jar</packaging>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1.${maven.build.timestamp}</version>
     
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
