Basic WOPE preview support
- Runtime manager
- WOPE preview with runtime selector
- Warning : still needs a modified WOPE .war (with Spring > 2.3.2) in
order to support Java 8

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -145,3 +145,5 @@ builtin.plugin.preview.remote_html.no_connection = No connection
 builtin.plugin.preview.remote_html.track_active_file = Track
 builtin.plugin.project_wizard.initializr.flavor = Flavor
 builtin.plugin.project_wizard.initializr.connection_warning = An Internet connection is required
+builtin.plugin.preview.wope.title = WOPE Preview
+builtin.plugin.preview.wope.not_configured.text = This preview is still experimental, edit your ~.shift.preferences.json file to configure it.
