Enhanced WOPE experimental support
- Async WOPe runtime startup
- Fixed import option on folders in project navigator
- Fixed cell display issue in project navigator
- Fixed concurrency bug in task manager
- Fixed plugin lifecycle loading

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -147,3 +147,4 @@ builtin.plugin.project_wizard.initializr.flavor = Flavor
 builtin.plugin.project_wizard.initializr.connection_warning = An Internet connection is required
 builtin.plugin.preview.wope.title = WOPE Preview
 builtin.plugin.preview.wope.not_configured.text = This preview is still experimental, edit your ~.shift.preferences.json file to configure it.
+builtin.plugin.preview.wope.task.starting_runtime = Starting runtime %s
