--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,6 @@
 application.name = Shift
 application.version.code = ${versionCode}
 application.version.name = ${versionName}
-application.build.number = ${timestamp}
+application.build.number = ${buildNumber}
+application.build.channel = ${channel}
 
